git ignoring vim swap files
References #8

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ _testmain.go
 *.test
 *.prof
 
+# Temporary & backup files of text editors
+# vim swap files
+.*.swp
+
 #Dev certs in current directory
 ca.crt
 minion.crt
