--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,16 @@ go:
   - 1.7
   - tip
 
+before_install:
+  # Install GeoIP library
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libgeoip-dev
+  # Install maxmind ASN database
+  - wget http://download.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz
+  - gunzip *.dat.gz
+  - sudo mkdir -p /usr/share/GeoIP/
+  - sudo mv *.dat /usr/share/GeoIP/
+
 install:
   - go get github.com/turbobytes/pulse/utils
 
